fix product archive page header and nav bar spacing

--- a/themes/inhabitent-theme/sass/_content.scss
+++ b/themes/inhabitent-theme/sass/_content.scss
@@ -200,23 +200,45 @@ button{
 
 /*Shop Archive*/
 .archive {
-	.shop-nav,
+	.page-header{
+		border-bottom: 1px lightgray dotted;
+		padding-bottom: 30px;
+		margin-bottom: 30px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+	}
+	.site-content{
+	padding-bottom: 80px;
+}
+}
 	h1 {
-		text-align: center;
-		font-family: Novecento Sans;
-		text-transform: uppercase;
+		@include font-uppercase;
+		padding-left: 40px;
+		font-size: 2.5rem;
+		margin-bottom: 0;
 
 	}
 
 	.shop-nav{
+		@include font-uppercase;
 		list-style-type: none;
 		display: flex;
 		flex-flow: row nowrap;
 		justify-content: center;
+		align-items: center;
+		font-size: 1.3rem;
+		text-align: center;
+
+		li {
+			text-align: center;
+			margin: 0 1.5rem;
+		}
 
 		a {
 			width: 1rem;
-			margin: 1rem 2rem;
+
 			color: $color__brand;
 
 			&:hover{
@@ -224,6 +246,7 @@ button{
 			}
 		}
 	}
+	
 
 	.products-grid {
 		display: flex;
@@ -239,7 +262,7 @@ button{
 
 		.product-description{
 			border: 1px lightgray solid;
-			border-top: 10px lightgray solid;
+			border-top: 5px lightgray solid;
 			text-align: center;
 			display: flex;
 			justify-content: space-around;
@@ -259,7 +282,7 @@ button{
 		}
 
 		.product-image {
-			width: 100%;
+			width: 100%;	
 			height: 250px;
 			display: flex;
 			justify-content: center;
@@ -275,7 +298,7 @@ button{
 			}
 		}
 	}
-}
+
 
 
 /*About Page*/
@@ -304,7 +327,6 @@ button{
 .widget-area {
 	padding: 55px 0px 0px 55px;
 	width: 30%;
-	// line-height: 2.5;
 
 	h2{
 		text-transform: uppercase;
