--- a/themes/inhabitent-theme/sass/_mixins.scss
+++ b/themes/inhabitent-theme/sass/_mixins.scss
@@ -10,3 +10,9 @@
 	margin-left: auto;
 	margin-right: auto;
 }
+
+// Font family and transform
+@mixin font-uppercase {
+  font-family: Novecento Sans;
+    text-transform: uppercase;
+}
